src/app/media/media.scss
#container_media{


	.media-about{
		background: url('/background/starsplatter.png');
		border-bottom: 4px solid #DC79FF;

		display: grid;
		grid-template-columns: 1.5fr 1fr;
		gap: 1em;

		.text-part{
			display: flex;
			// align-items: center;
			justify-content: center;
			flex-direction: column;
			padding: 3em;
			.title{
				font-size: 2.5rem;
				color: #DC79FF;

			}

		}
		.art-part{
			display: flex;
			align-items: center;
			padding: 5em;
			position: relative;
			img{
				max-width: 100%;
			}

			.main-img{
				border-radius: 50%;
				aspect-ratio: 1/1;
				border: 2px dashed #52FF00;
			}

			.logo{
				position: absolute;

				max-width: 100%;
				left: 2%;
				bottom: 0%;
				scale: .8;
			}
			
		}

	}

	.media-stats{
		position: relative;
		display: flex;
		align-items: center;
		padding: 4em;
		.media-stat-panel{
			width: 100%;
			box-shadow: 2px 5px 4px rgba(0, 0, 0, 0.368);
			outline: 2px solid black;
			height: 400px;
			background: url('/background/phee_xo_tiled.png'),rgba(0, 0, 0, 0.764);
			background-size: 40px;
			background-blend-mode: multiply;
			.stat-head{
				background: url('/background/stripe.png'),rgba(0, 0, 0, 0.281);
				padding: .5em 1em;
				background-blend-mode: multiply;
				box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.523);
				animation: pattern-scroll 15s infinite linear;
			}

			.stat-body{
				display: grid;
				grid-template-columns: 1fr 2fr;
				
				.ccv-container{
					display: flex;
					flex-direction: column;
					align-items: center;
					justify-content: center;
					img{
						max-height: 100%;
						max-width: 100%;
						width: 250px;
						height: 250px;
					}

					.ccv-list{
						display: flex;
						box-shadow: 2px 5px 5px rgba(0, 0, 0, 0.49);
						border: 2px solid black;
						transition: all 0.1s ease;
						&:hover{
							scale: 1.05;
							outline: 3px dotted #DC79FF;
						}
						.ccv{
							display: flex;
							flex-direction: column;
							text-align: center;
							padding: .2em 1.5em;
							h3{
								font-size: 1rem;
								font-weight: normal;
							}
						}
						.avg{
							background: #531839;
							h3{
									color: #DC79FF;
							}
						}
						.peak{
							h3{
								color: #52FF00;
							}
							background: #204E4B;
						}
					}
				}

				.socials-container{
					display: flex;
					align-items: center;
					justify-content:center;
					gap: 1em;
					.stat{
						background: #531839;
						display: flex;
						flex-direction: column;
						align-items: center;
						justify-content: center;
						text-align: center;
						padding: 1em;
						gap: .2em;
						border: 4px dashed #AA405E;

						transition: all 250ms ease;
						&:hover{
							transform: translateY(5%);
						}
						img{
							width: 80px;
							height: 80px;
						}

						.amount{
							font-size: .8rem;
							font-weight: bold;
							margin-top: 2em;
						}
						.name{
							font-size: .8rem;
							opacity: .5;
						}
					}
				}
			}
		}
	}
}

@keyframes pattern-scroll {
	0%{
		background-position: 0% 0%;
	}
	100%{
		background-position: 400px 400px;
	}
}

